[package]
name = "lint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.12"
swc_common = { version = "0.33.12", features = ["tty-emitter"] }
swc_ecma_ast = "0.110.15"
swc_ecma_parser = "0.141.34"
swc_ecma_visit = "0.96.15"
swc_visit = "0.5.8"
